Fixed Issues Payment detail step - areeba logo is too big - entire UI needs to be as per the brand and rest of the site. show logo in the menu of web

--- a/public/web/css/custom.css
+++ b/public/web/css/custom.css
@@ -7276,3 +7276,9 @@ select:-webkit-autofill:focus {
 .demo.fluid-label label {
     display: none !important;
 }
+
+.set-image-size {
+    width: 370px;
+    height: auto;
+    object-fit: cover;
+}
